--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,9 @@ env:
  matrix:
   - DB=pgsql
   - DB=mysqli
+  
+services:
+  - mysql
 
 before_install:
   - phpenv config-rm xdebug.ini
@@ -47,5 +50,3 @@ script:
   - moodle-plugin-ci savepoints
   - moodle-plugin-ci mustache
   - moodle-plugin-ci grunt
-  - moodle-plugin-ci phpunit
-  - moodle-plugin-ci behat
